--- a/agent/src/main/resources/application.properties
+++ b/agent/src/main/resources/application.properties
@@ -1,12 +1,22 @@
+# MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3306/Rabbit-MQ?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
 
-# RabbitMQ config
+# RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+BACKEND_DPC_QUEUE_NAME = backPost
+AGENT_QUEUE_NAME = agentPost
+
+
+
+# Application server
 server.port=8088
+
+# BackEnd aplication
+BACKEND_DPC_URI_API_ADRESS = http://localhost:8080/api/user
