--- a/backDPC/src/main/resources/application.properties
+++ b/backDPC/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+BACKEND_DPC_QUEUE_NAME = backPost
+AGENT_QUEUE_NAME = agentPost
+
+
+# Application server
 server.port=8080
 
